# TeamsBreaker

./: Dockerfile  LICENSE  README.md  api_doc.txt  pyproject.toml
teams_breaker/: teams_api.py  teams_auth.py  teams_breaker.py  teams_requests.py  teams_user.py
tests/: example_conf.yaml
