[tool.poetry]
name = "teams_breaker"
version = "0.0.1"
description = "TeamsBreaker is a tool for performing phishing campaigns through Microsoft Teams, avoiding prompting splash screens from external senders."
authors = ["Marcos Gonzalez Hermida"]
documentation = ""
readme = "README.md"
packages = [
  {include = "teams_breaker"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
ruff = "^0.0.287"
loguru = "^0.7.1"
msal = "^1.23.0"
black = "^23.9.1"
prettytable = "^3.8.0"
ansimarkup = "^2.1.0"
chevron = "^0.14.0"

[tool.poetry.group.dev.dependencies]
#deptry = "^0.6.4"
pre-commit = "^2.20.0"

[tool.poetry.group.docs.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
